	* Fixed bugs concerning r_vboDeformVertexes
	* Added more ET specific keywords to the .shader parser
	* Added top-down view for r_showBspNodes
	* Added engine version to the console
	* Updated JPG loader to libjpeg 8c
	* Added Omni-bot 0.81 to default etmain game
	* Defaulted com_maxfps to 125
	* Rewrote HDR tone mapping to use correct RGB <-> XYZ <-> Yxy color space conversions

ETXMap
	* Improved ETXMap -map2map -format quake3 using additional support for worldspawn detail brushes
	* Improved ETXMap -map2map -format quake3 to support texture coordinates without GtkRadiant 1.4
	* Improved alternate BSP splitter algorithm for faster map compiles and better rendering speeds
	* Updated JPG loader to libjpeg 8c
	* Changed Unix home dir from .etwolf to .etxreal
	
ETMain
	* Added replacement textures for battery and fueldump by Eonfge
	* Added high quality skyboxes and models by AVOC
	* Added fueldump additions by KeMoN
	* Converted original ET maps to the Doom 3 .map format and added an etx_ prefix to them
	
	
___________________________________________________

ET-XreaL_snapshot_20110505.7z
__________________________________________

	* Optimized all OpenGL shaders by using compile macro combinations
	* Optimized ET skeletal animation with LOD meshes
	* Fixed shader problems with the open source Intel driver
	* Renamed r_noDynamicLighting to r_dynamicLight for better compatibility with ET mods
	* Fixed sky vs. global fog rendering issues
	* Enabled SSE math code
	* Fixed bug in Tess_SurfacePolybuffer() which caused the broken flamethrower flames
	* Fixed bug concerning .map entity modelscale_vec keyword
	* Added cheat to ignore zz-XreaL-<date>.pk3 files if connecting to pure servers
	* Added CPU deformVertexes fallback if there is no OpenGL 3 driver or r_vboDeformVertexes is set to 0
	* Added r_shadowMapSizeSunUltra - r_shadowMapSizeSunLow
	* Removed old, broken and unsupported stencil shadow volumes code
	* Fixed PVS culling by areamasks